<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="category_city">City</string>
    <string name="category_sightseeing">Sightseeing</string>
    <string name="category_museum">Museum</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_night_life">Night Life</string>
    <string name="key_picture_id">pictureID</string>
    <string name="key_detail_id">detailID</string>
    <string name="city_header1">City:</string>
    <string name="city_header2">Province:</string>
    <string name="city_header3">Country:</string>
    <string name="city_subtitle1">Hangzhou</string>
    <string name="city_subtitle2">Zhejiang</string>
    <string name="city_subtitle3">China</string>
    <string name="city_header4">About the city:</string>
    <string name="city_para1">Hangzhou is the capital and most populous city of Zhejiang Province in east China.It sits at the head of Hangzhou Bay, which separates Shanghai and Ningbo. Hangzhou grew to prominence as the southern terminus of the Grand Canal and has been one of the most renowned and prosperous cities in China for much of the last millennium. The city\'s West Lake, a UNESCO World Heritage Site, immediately west of the city, is amongst its best-known attractions.</string>
    <string name="city_para2">The subtropical monsoon climate contributes to varied seasonal sceneries, making Hangzhou one of China\'s most popular travel destinations all the year round.</string>
    <string name="blankspace">\n</string>
    <string name="detail_header">Intro:</string>
    <string name="more">more>></string>
    <string name="attraction1_name">West Lake</string>
    <string name="attraction1_chinese_name">西湖</string>
    <string name="attraction1_address">West Lake, Hangzhou</string>
    <string name="attraction1_phone">86-571-87179617</string>
    <string name="attraction1_detail">Among the world’s top-rated lakes, Hangzhou’s wondrous West Lake is one of the best. The real attraction of West Lake, however, lies not on the surface but in its abundant wealth of legend, myth, and enigma accumulated over various dynasties. \nThroughout China, there is no other lake that has caught the imagination of so many poets, scholars, painters, sculptors, calligraphers and even emperors over so long a time. Blessed with enchanting natural scenery and an enduring cultural legacy immortalized by a multitude of poems, calligraphy masterpieces, paintings and sculptures, West Lake’s boundless charm is not only a visual spectacle but also an experience felt by the heart.</string>
    <string name="attraction2_name">Lingyin Temple</string>
    <string name="attraction2_chinese_name">灵隐寺</string>
    <string name="attraction2_address">No.1, Fayun Alley, Lingyin Road</string>
    <string name="attraction2_phone">86-571-87968665</string>
    <string name="attraction2_detail">Lingyin Temple, also known as Temple of Soul\'s Retreat (literal translated name), is the most celebrated place of interest around West Lake and one of the top ten Buddhist temples of China. In 1961 it was listed for protection as a key provincial historical and cultural site and considered a leading center for research related to Chinese Buddhist culture. Situated at the west end of the West Lake, the temple is confronted with the well-known Peak Flying from Afar (飞来峰, famous for its grotto carvings) and backed by Northern Peak (北高峰).</string>
    <string name="attraction3_name">Meijiawu Tea Culture Village</string>
    <string name="attraction3_chinese_name">梅家坞茶文化村</string>
    <string name="attraction3_address">No.1, Meiling South Road</string>
    <string name="attraction3_phone">86-571-87322067</string>
    <string name="attraction3_detail">Meijiawu Tea Culture Village is located in the west of West Lake Scenic Area. It\'s a village with a history of over 600 years. It\'s also the biggest natural village where the world-famous West Lake Dragon (Longjing) Well Tea (西湖龙井) is produced. Besides its extraordinary tea and tea culture, Meijiawu Village is also renowned for its idyllic scene, which is seldom seen in an urbanized world. \nThe present Meijiawu Village has become much more easily accessible, thanks to the opening of the local longest Meijiawu-Lingyin tunnel (梅灵隧道). Domestic and international tourists regard the village as a must-see attraction. It consists of eight tourists sections, including the tea culture tourist center, the rural leisure tourist area, and a fishing village.</string>
    <string name="attraction4_name">Viewing Fish at Flower Pond</string>
    <string name="attraction4_chinese_name">花港观鱼</string>
    <string name="attraction4_address">Between South end of Nanshan Road and Su Causeway</string>
    <string name="attraction4_phone">86-571-87963033</string>
    <string name="attraction4_detail">This gorgeous site is located in Huagang (Flower Pond) Park, which lies between Western Hill and Su Causeway. According to local history, there used to be a tiny creek that flowed from the nearby Flower Hill into West Lake, hence the name Flower Pond. Huagang Park used to be a private garden of Lu Yunsheng (a palace eunuch in the Southern Song Dynasty). The garden’s fame rose in the Qing Dynasty when Emperor Kangxi personally wrote an inscription of the garden’s name for engraving on a stone tablet erected by the fish pond. \nUsually, a boat ride on West Lake and trip around Huagang Park is part of a day’s itinerary. Two fish ponds in the park are must-sees for visitors. The small one, close to the main entrance to the park, is a historic fish pond. It is the original site of Viewing Fish at Flower Pond, which has a history of 800 years. Beside the fish pond stands the pavilion that houses the Imperial Stele. The big fish pond, lying almost in the middle of the park, is known as the red carp pond where a few thousand red carp are kept. There is an isle in the pond that is reached by a zigzag bridge, an arch bridge and a short embankment. The bank of the pond is planted with a rich variety of trees and flowers, the reflection of which in water is fantastic. Dotted with fallen petals is the undulating surface of the pond, in which red carp clothed with petals are seen sucking petals. Bending over the rails of the bridge and watching the carp noisily scrambling for food thrown to them is a delicious experience.</string>
    <string name="attraction5_name">Hefang Street</string>
    <string name="attraction5_chinese_name">河坊街</string>
    <string name="attraction5_address">Hefang Street, Shangcheng District</string>
    <string name="attraction5_phone">86-571-87075758</string>
    <string name="attraction5_detail">The historic Hefang Old Street, located at the foot of the scenic Wu Hill in southern Hangzhou and quite close to the famous West Lake, overflows with culture in an urban setting. As one of the best preserved urban areas of ancient Hangzhou, it’s a snapshot of the city\'s history. \nHangzhou was China\'s capital during the Southern Song Dynasty more than 800 years ago, and Hangzhou’s urban Hefang Street has many shops, restaurants and taverns that represent its place in history. Hefang Street has stood the test of time, surviving through the Yuan, Ming and Qing dynasties. Today it is still a prosperous marketplace. Most of the businesses and shops in Hefang Street are over 100 years old. Hefang Street wasn’t only the heart of old Hangzhou but was also the commercial center in ancient China.</string>
    <string name="attraction6_name">Lingering Snow on the Broken Bridge</string>
    <string name="attraction6_chinese_name">断桥残雪</string>
    <string name="attraction6_address">Beishan Road</string>
    <string name="attraction6_phone">86-571-87996663</string>
    <string name="attraction6_detail">The Broken Bridge is located at the east end of the Bai Causeway that separates the Inner Lake and the Outer Lake. The bridge is of a single-arch vaulted stone construction with stone balustrades on both sides. To its east is a pavilion that houses a stone tablet with the imperial inscription, “Lingering Snow on the Broken Bridge.”  Beside it and facing the bridge stands a lakeside pavilion with vermilion pillars and ornate beams. It offers a nice view of the Inner Lake and the Solitary Hill.\nThe Broken Bridge isn’t actually broken, and it’s as complete as any other. It’s called Broken Bridge because in the winter, when the sun comes out after a couple of day’s snowfall, the snow on the sunny side of the bridge melts first, while the snow on the shady side still lingers. Thus from a distance, the bridge appears to be broken.</string>
    <string name="attraction7_name">Pagoda of Six Harmonies</string>
    <string name="attraction7_chinese_name">六和塔</string>
    <string name="attraction7_address">No.16, Zhijiang Road</string>
    <string name="attraction7_phone">86-571-86591364</string>
    <string name="attraction7_detail">There are three famous pagodas in Hangzhou, Leifeng Pagoda, Baochu Pagoda, and Pagoda of Six Harmonies. Among the three, Pagoda of Six Harmonies is known for its majesty and local people described it as a General.\nPagoda of Six Harmonies stands on the Moon Disc Hill (月轮山) overlooking the Qiantang River(钱塘江). The pagoda is built in 970 AD when Hangzhou was the capital of the Southern Song. It’s one of the most prominent wood-and-brick structures of ancient China and also the perfect place to enjoy the superb view of Qiantang River and the grandeur Qiantang River Bridges (钱塘江大桥).\nThere are two kinds of interpretation of the name—Six Harmonies. One is that the name is related to six codes of Buddhism. Six Harmonies mean the harmonies of body, mind, speech, opinion, wealth and abstinence from temptation. The other goes that Six Harmonies refer to the harmony of four directions (east, west, south, west), heaven and earth.</string>
    <string name="attraction8_name">Three Pools Mirroring the Moon</string>
    <string name="attraction8_chinese_name">三潭印月</string>
    <string name="attraction8_address">West Lake District</string>
    <string name="attraction8_phone">86-571-87065684</string>
    <string name="attraction8_detail">This is the largest of the three fairy islets in the Outer Lake of West Lake, known for a wonderful scene created from three pools surrounding three pagodas on the night of the Mid-autumn Festival. The islet offers the best place to enjoy a beautiful full moon at the mid lake.\nThe three gourd-shaped stone pagodas can be seen sticking about two meters above water. They assume an equilateral triangle with each side being sixty-two meters in length. They are all hollow and each of them has five equally-shaped small round holes on their bodies. On the night of the Mid-autumn Festival, when there is a bright full moon hanging in the sky, local people love to ride boats there, put a lit candle into each of the pagodas and seal the holes with thin white paper. The candlelight reflected on the water surface resembles the reflection of the moon. Around the three pagodas you may find fifteen candles. But don’t forget about the actual moon in the sky and its reflection on the water. All together, therefore, there should be seventeen moons. At this moment, you’ll enjoy the reflections on the water around the pagodas, the clouds and the moon as they mingle with one another, while the candlelight, and the moonlight shed upon the lake enhancing each other’s beauty. With gentle ripples shimmering on the lake, there seems to be innumerable moons dancing in the water. What an enchanting scene.</string>
    <string name="attraction9_name">Yue Fei Mausoleum</string>
    <string name="attraction9_chinese_name">岳庙</string>
    <string name="attraction9_address">No.80, Beishan Road</string>
    <string name="attraction9_phone">86-571-85172244</string>
</resources>